source/refined-github.css
/* eslint-disable-next-line refined-github/css-documentation -- Global, no docs */
:root {
	--rgh-green: var(--fgColor-success, var(--color-success-fg, #1a7f37));
	--rgh-red: var(--fgColor-danger, var(--color-danger-fg, #cf222e));
	--rgh-yellow: var(--fgColor-attention, #c69026);
	--rgh-border-color: var(
		--borderColor-muted,
		var(--color-border-muted, #d8dee4)
	);
	--rgh-border-outer-color: var(
		--borderColor-default,
		var(--color-border-default, #d1d9e0)
	);
	--rgh-background: var(--bgColor-default, var(--color-canvas-default, #fff));

	.rgh-bg-none {
		background: none !important;
	}

	.rgh-z-index-5 {
		position: relative;
		z-index: 5;
	}
}

/* For `open-all-selected` and `pr-filters`: set a reduced padding for all buttons */
/* Info: https://github.com/refined-github/refined-github/issues/1830 */
/* Info: https://github.com/refined-github/refined-github/issues/1904 */
/* Test: https://github.com/refined-github/sandbox/pulls */
#js-issues-toolbar .table-list-header-toggle {
	details {
		padding: 0 !important;
	}

	summary {
		padding-left: 8px !important;
		padding-right: 8px !important;
	}

	> :last-child > summary {
		padding-right: 0 !important;
	}
}

/* For `open-all-notifications` and `select-notifications`: allow header wrapping */
/* Info: https://github.com/refined-github/refined-github/issues/5705 */
/* Test: */
/* https://github.com/notifications (Grouped by date) */
/* https://github.com/notifications (Grouped by repo) */
/* https://github.com/notifications?query=reason%3Acomment (which is an unsaved filter) */
:root {
	.js-check-all-container .js-bulk-action-toasts ~ div .Box-header {
		flex-wrap: wrap;
		height: auto !important; /* Unset the default height to allow wrapping */
		min-height: 52px; /* Re-set the default height as a minimum height */
	}

	:is(
		.js-notifications-mark-selected-actions,
		.js-notifications-mark-all-actions
	):not([hidden]) {
		display: contents !important;
	}
}

/* 404 page animation on load */
/* Info: None, self-explanatory */
/* Test: https://github.com/refined-github/refined-github/404 */
[alt='404 “This is not the web page you are looking for”'] {
	animation: fade-in 3s ease-out;
}

/* Lighten deletions in Markdown */
/* Info: https://github.com/refined-github/refined-github/pull/958 */
/* Test: https://github.com/refined-github/sandbox/issues/3 */
.markdown-body del {
	color: var(--fgColor-muted, var(--color-fg-muted, fuchsia));
}

/* Expand empty diffs in PRs */
/* Info: https://github.com/refined-github/refined-github/issues/1630 */
/* Test: https://github.com/webpack/webpack/pull/6446/changes */
:root .file .data {
	&.empty {
		padding: 54px;
		text-align: center;
	}

	table {
		text-align: left;
	}
}

/* TODO [2027-01-01]: Drop after legacy PR files view is removed. Currently it only applies to `quick-comment-hiding` */
/* Improve dropdown expansion animation (e.g. top-right dropdown in comments) */
/* It normally pops in from the center */
/* Info: https://github.com/refined-github/refined-github/pull/1715 */
/* Test: https://github.com/refined-github/sandbox/pull/10#pullrequestreview-832816627 */
.dropdown-menu-sw {
	transform-origin: 90% top;
}

/* TODO [2027-01-01]: Drop after legacy PR files view is removed */
/* Keep diff stats in "Jump to" dropdown when the header is fixed */
/* Info: https://github.com/refined-github/refined-github/issues/3925 */
/* Test: https://github.com/refined-github/refined-github/pull/3922/files */
.select-menu-item-text .diffstat {
	display: inline !important;
}

/* Style the "Find feature" dialog that appears on top of the page */
/* Info: https://github.com/refined-github/refined-github/pull/4119 */
/* Test: start the "Identify feature" wizard from the options */
#rgh-bisect-dialog {
	position: fixed;
	bottom: 50%;
	right: 50%;
	transform: translate(50%, 50%);
	min-width: 380px; /* Avoids a width change on the last step which causes the YES button to be where NO was */
	box-shadow: var(
		--shadow-floating-large,
		var(--color-shadow-large, var(--color-toast-shadow))
	);
	z-index: 2147483647;
}

/* Bold username in conversation lists */
/* Info: https://github.com/refined-github/refined-github/issues/4899 */
/* Test: https://github.com/refined-github/refined-github/pulls */
/* Test: https://github.com/refined-github/refined-github/issues */
:is(.js-issue-row, span[class^='PinnedIssue-module__issueMetadata'])
	a[data-hovercard-type='user'],
a[class^='IssueItem-module__authorCreatedLink'] {
	font-weight: 600;
}

/* Increase size of profile picture in user hovercard by 1.5x (default is 48px) */
/* Info: https://github.com/refined-github/refined-github/issues/7695 */
/* Test: https://github.com/refined-github/refined-github */
.user-hovercard-avatar > img.d-block.avatar-user {
	width: 72px;
	height: 72px;
}

/* Make the gray "Star" icon in the feed yellow */
/* Info: https://github.com/refined-github/refined-github/pull/8407 */
/* Test: https://github.com/feed */
.octicon-star-fill {
	color: var(--button-star-iconColor);
}

/* Add hover effect to attachment row on the release page */
/* Info: https://github.com/refined-github/refined-github/issues/8339 */
/* Test: https://github.com/refined-github/refined-github/releases/tag/25.7.16 */
@media (min-width: 800px) {
	.Box-footer
		.Box--condensed
		li:has(.octicon-package, .octicon-file-zip):hover {
		background-color: var(--bgColor-muted, fuchsia);
		&:first-of-type {
			border-top-color: var(--borderColor-muted, fuchsia);
		}
	}
}

/* eslint-disable-next-line refined-github/css-documentation -- Refer to `dom-formatters` */
.rgh-anchored-link {
	position: absolute !important;
	position-area: center;
	z-index: 2;
	pointer-events: auto;
	/* For debugging */
	/* color: red !important; */
}

/* Show PR reviews on mobile */
/* Info: https://github.com/refined-github/refined-github/issues/9074 */
/* Test (no CI checks): https://github.com/refined-github/sandbox/pulls?q=is%3Apr+review%3Aapproved */
/* Test: https://github.com/refined-github/refined-github/pulls?q=is%3Apr+review%3Aapproved */
@media (max-width: 768px) {
	.js-issue-row .markdown-title ~ .d-flex {
		flex-direction: column;

		.d-md-inline-flex {
			display: inline-flex !important;
			/* Hide [•] 1 review approval*/
			font-size: 0;
			a {
				font-size: 12px;
			}
			.ml-1 {
				margin-left: 0 !important;
			}
		}
	}
}

/* Untruncate long asset name */
/* Info: https://github.com/refined-github/refined-github/issues/9184 */
/* Test: https://github.com/hkint/xiaomi-ax3000t-immortalwrt-hanwckf-firmware-build/releases/tag/ImmortalWrt_2024.11.13-0026 */
.col-12.col-lg-6:has(.octicon-package + a[href*='/releases/download/']) {
	width: 100%;
	.Truncate-text.text-bold {
		white-space: wrap;
	}
}

/* TODO [2027-01-01]: Drop after repo PR list becomes exclusively React-based */
/* Hide label on Milestones link if there are zero milestones */
/* Info: https://github.com/refined-github/refined-github/issues/5120 */
/* Test: https://github.com/refined-github/refined-github/pulls */
[data-selected-links^='repo_milestones ']:has([title='0']) {
	width: 36px; /* Size it so only the icon is visible */
	overflow: hidden; /* Crop the text out */
	padding-left: 10px;

	svg {
		margin-right: 20px; /* Push the text farther away from the text so it's cropped out */
	}
}

/* Highlight sponsor label in comments */
/* Info: https://github.com/refined-github/refined-github/issues/7293 */
/* Test: https://github.com/fregante/webext-storage-cache/issues/19#issuecomment-653229351 */
span[data-testid='sponsor-label'] {
	color: #db61a2; /* Matches color-gh-sponsor. Also hardcoded in the SVG below */
	&::before {
		content: url('data:image/svg+xml,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' fill=\'%23db61a2\' width=\'12\' height=\'12\' viewBox=\'0 0 16 16\'%3E%3Cpath d=\'M7.655 14.916zh-.002l-.006-.003-.018-.01a22 22 0 0 1-3.744-2.584C2.045 10.731 0 8.35 0 5.5 0 2.836 2.086 1 4.25 1 5.797 1 7.153 1.802 8 3.02 8.847 1.802 10.203 1 11.75 1 13.914 1 16 2.836 16 5.5c0 2.85-2.044 5.231-3.886 6.818a22 22 0 0 1-3.433 2.414 7 7 0 0 1-.31.17l-.018.01-.008.004a.75.75 0 0 1-.69 0\'/%3E%3C/svg%3E');
		margin-top: 0.25em;
		margin-right: 0.3em;
	}
}

/* Make the "Symbolic link" more noticeable */
/* Info: https://github.com/refined-github/refined-github/pull/9419#discussion_r3214988559 */
/* Test: https://github.com/wmluke/angular-flash/blob/0.1.14/app/components */
a[class^='CodeSizeDetails-module__PrimerLink'] {
	color: var(--fgColor-accent, var(--color-accent-fg, fuchsia));
	&:hover {
		text-decoration: underline;
	}
}

/* Hide the header logo on small screens */
/* Info: https://github.com/refined-github/refined-github/issues/5120 */
/* Test: https://github.com/refined-github/refined-github */
@media (max-width: 600px) {
	a[class*='appHeaderHome'] {
		display: none;
	}
}

/* Highligh review type radio labels on hover to improve clickability */
/* Info: https://github.com/refined-github/refined-github/issues/9447 */
/* Test: https://github.com/refined-github/refined-github/pull/9611/changes (must exclude disabled choices) */
fieldset[class*='ReviewMenu-module__RadioGroup'] {
	[class*='FormControl-ControlHorizontalLayout'] {
		z-index: 0;
	}

	[class*='LabelContainer'] {
		flex-grow: 1;
	}

	label[data-component='FormControl.Label']:not([data-control-disabled]) {
		position: relative;
		&:hover::before {
			content: '';
			position: absolute;
			z-index: -1;
			inset: -5px;
			left: -25px;
			background-color: var(--control-transparent-bgColor-hover, fuchsia);
			border-radius: var(--borderRadius-medium, 2em);
		}
	}
}

/* Make collapsed diffs more visually distinct */
/* Info: https://github.com/refined-github/refined-github/issues/7338 */
/* Test: https://github.com/refined-github/refined-github/pull/7212/changes */
/* Test: https://github.com/refined-github/refined-github/pull/7212/changes/b6ef35a9811a5e32d1758a74db75459b028e49d0 */
/* Test: https://github.com/refined-github/refined-github/commit/b6ef35a9811a5e32d1758a74db75459b028e49d0 */
[class*='HiddenDiffPatch-module__gridColumnTemplate'] {
	margin-block: 6em;
}

